[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/main/Main.gd" type="Script" id=2]
[ext_resource path="res://Themes/Default.theme" type="Theme" id=3]
[ext_resource path="res://assets/music/kalimba.ogg" type="AudioStream" id=4]
[ext_resource path="res://Themes/Buttons.theme" type="Theme" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.36377, 0.23226, 0.0795746, 1 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AdMob" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -256.0
margin_right = 256.0
margin_bottom = 256.0
texture = ExtResource( 1 )
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="Advice" type="RichTextLabel" parent="."]
anchor_top = 0.15625
anchor_right = 1.0
anchor_bottom = 0.189453
margin_top = -32.0
margin_bottom = 204.5
theme = ExtResource( 3 )
custom_styles/normal = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[wave]"
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -385.0
margin_top = -114.0
margin_right = 385.0
margin_bottom = 114.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_top = 18.0
margin_right = 770.0
margin_bottom = 210.0
alignment = 1

[node name="Banner" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 770.0
margin_bottom = 45.0
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 1

[node name="EnableBanner" type="Button" parent="CenterContainer/VBoxContainer/Banner"]
margin_right = 376.0
margin_bottom = 45.0
theme = ExtResource( 5 )
disabled = true
text = "ENABLE BANNER"

[node name="DisableBanner" type="Button" parent="CenterContainer/VBoxContainer/Banner"]
margin_left = 380.0
margin_right = 770.0
margin_bottom = 45.0
theme = ExtResource( 5 )
disabled = true
text = "DISABLE BANNER"

[node name="Interstitial" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 770.0
margin_bottom = 94.0
theme = ExtResource( 5 )
disabled = true
text = "INTERSTITIAL"

[node name="Rewarded" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 98.0
margin_right = 770.0
margin_bottom = 143.0
theme = ExtResource( 5 )
disabled = true
text = "REWARDED"

[node name="UnifiedNative" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 147.0
margin_right = 770.0
margin_bottom = 192.0
alignment = 1

[node name="EnableUnifiedNative" type="Button" parent="CenterContainer/VBoxContainer/UnifiedNative"]
margin_right = 366.0
margin_bottom = 45.0
theme = ExtResource( 5 )
disabled = true
text = "ENABLE UNFIED"

[node name="DisableUnifiedNative" type="Button" parent="CenterContainer/VBoxContainer/UnifiedNative"]
margin_left = 370.0
margin_right = 770.0
margin_bottom = 45.0
theme = ExtResource( 5 )
disabled = true
text = "DISABLE UNIFIED"

[node name="BannerSizes" type="ItemList" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -218.0
margin_top = -338.0
margin_right = 218.0
margin_bottom = -206.0
theme = ExtResource( 5 )
auto_height = true
same_column_width = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnifiedNative" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -286.5
margin_top = 193.5
margin_right = 286.5
margin_bottom = 654.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="CenterContainer/VBoxContainer/Banner/EnableBanner" to="." method="_on_EnableBanner_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Banner/DisableBanner" to="." method="_on_DisableBanner_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Interstitial" to="." method="_on_Interstitial_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Rewarded" to="." method="_on_Rewarded_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/UnifiedNative/EnableUnifiedNative" to="." method="_on_EnableUnifiedNative_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/UnifiedNative/DisableUnifiedNative" to="." method="_on_DisableUnifiedNative_pressed"]
[connection signal="item_selected" from="BannerSizes" to="." method="_on_BannerSizes_item_selected"]
